Update calendar layout to fix row alignment and adjust column spacing

--- a/index.html
+++ b/index.html
@@ -18,16 +18,234 @@
             </div>
             <h1 id="calendar-label">This Week</h1>
             <div id="calendar">
-                <div class="day"></div>
-                <div class="day"></div>
-                <div class="day"></div>
-                <div class="day"></div>
-                <div class="day"></div>
-                <div class="day"></div>
-                <div class="day"></div>
+                <div id="time-marker">
+                    <div class="marker">8AM</div>
+                    <div class="marker"></div>
+                    <div class="marker">9AM</div>
+                    <div class="marker"></div>
+                    <div class="marker">10AM</div>
+                    <div class="marker"></div>
+                    <div class="marker">11AM</div>
+                    <div class="marker"></div>
+                    <div class="marker">12PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">1PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">2PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">3PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">4PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">5PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">6PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">7PM</div>
+                    <div class="marker"></div>
+                    <div class="marker">8PM</div>
+                    <div class="marker"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
+                <div class="day">
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                    <div class="chunk"></div>
+                </div>
             </div>
             <div id="not-sure-yet"></div>
         </div>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
